[tool.poetry]
name = "tabpy"
version = "0.6.2"
description = "TabPy (the Tableau Python Server) is an external service implementation which expands Tableau's capabilities by allowing users to execute Python scripts and saved functions via Tableau's table calculations."
authors = ["tableau"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
TABPY = ''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
